--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+spec/assets/images
+
+public
+
 # Ignore bundler config.
 /.bundle
 
